--- a/style.css
+++ b/style.css
@@ -64,21 +64,19 @@ body{
     margin:0;
 }
 .item{
-    width:380px;
     height: 45px;
     min-height: 45px;
     position: relative;
     border-bottom: 1px solid rgba(0,0,0,0.1);
     list-style: none;
-    padding: 0;
-    margin: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content: space-between; */
+    padding: 5px 10px;
 }
 .item i.co{
-    position: absolute;
-    font-size: 25px;
-    padding-left:5px;
-    left:15px;
-    top:10px;
+    justify-content: flex-start;
 }
 .item i.co:hover{
     cursor: pointer;
@@ -87,14 +85,9 @@ body{
     color:#6eb200;
 }
 .item p.text{
-    position: absolute;
-    padding:0;
-    margin:0;
     font-size: 20px;
-    left:50px;
-    top:5px;
     background-color: #FFF;
-    max-width:285px;
+    margin-left: 15px;
 }
 .lineThrough{
     text-decoration: line-through;
@@ -102,13 +95,18 @@ body{
 }
 .item i.de{
     position: absolute;
-    font-size: 25px;
-    right:15px;
-    top:10px;
+    right: 10px;
+    font-size: 20px;
 }
 .item i.de:hover{
     color:#af0000;
     cursor: pointer;
+}
+.fa-check-circle:before {
+    content: "\f058";
+}
+.fa-trash-o:before {
+    content: "\f014";
 }
 /* ------------ add item ------------ */
 .add-to-do{
